@@ -1,3 +1,8 @@
+1.x.x
+-----
+
+- PySetProcTitle : Added version 1.1.10.
+
 1.3.0
 -----
 
